front form design spacing issue fixing

--- a/admin1/assets/css/custom.css
+++ b/admin1/assets/css/custom.css
@@ -733,3 +733,7 @@
 }
 
 /* quantity css end */
+.navbar-vertical .navbar-nav .nav-link.active{
+  color: #344767;
+  background-color: #fff;
+}
